<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>This library provides support for integrating Data Sketches into Spark</description>
    <url>https://github.rbx.com/Roblox/data-sketches-functions</url>

    <groupId>com.roblox.spark.sketches</groupId>
    <artifactId>roblox-data-sketches-functions</artifactId>
    <version>1.0-3.2.1-SNAPSHOT</version>

    <parent>
        <artifactId>datasketches-parent</artifactId>
        <groupId>com.roblox</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <properties>
        <spark.version>3.2.0</spark.version>
        <scala.version>2.12.17</scala.version>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <scala.binary.version>2.12</scala.binary.version>
        <third.party.scope>provided</third.party.scope>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>${third.party.scope}</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>${third.party.scope}</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.datasketches</groupId>
            <artifactId>datasketches-java</artifactId>
        </dependency>

        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.12</artifactId>
            <version>3.2.15</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/scala</sourceDirectory>
        <extensions>
            <extension>
                <groupId>org.kuali.maven.wagons</groupId>
                <artifactId>maven-s3-wagon</artifactId>
                <version>1.2.1</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>add-source</goal>
                            <goal>doc-jar</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
<!--            &lt;!&ndash; disable surefire &#45;&#45; >-->
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>2.7</version>
              <configuration>
                <skipTests>true</skipTests>
              </configuration>
            </plugin>
<!--            &lt;!&ndash; enable scalatest &#45;&#45; >-->
            <plugin>
              <groupId>org.scalatest</groupId>
              <artifactId>scalatest-maven-plugin</artifactId>
              <version>2.2.0</version>
              <configuration>
                  <argLine>
                      --add-opens=java.base/java.lang=ALL-UNNAMED
                      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                      --add-opens=java.base/java.io=ALL-UNNAMED
                      --add-opens=java.base/java.net=ALL-UNNAMED
                      --add-opens=java.base/java.nio=ALL-UNNAMED
                      --add-opens=java.base/java.util=ALL-UNNAMED
                      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                      --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                      --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
                      --add-opens=java.base/sun.security.action=ALL-UNNAMED
                      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                  </argLine>
                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                <junitxml>.</junitxml>
                <filereports>WDF TestSuite.txt</filereports>
              </configuration>
              <executions>
                <execution>
                  <id>test</id>
                  <goals>
                    <goal>test</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
                        <!--Attach java-docs-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--Attach sources-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--Fat jar-->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

<!--    <scm>-->
<!--        <connection>scm:git:ssh://git@github.rbx.com/Roblox/data-sketches-functions.git</connection>-->
<!--        <developerConnection>scm:git:ssh://git@github.rbx.com/Roblox/data-sketches-functions.git</developerConnection>-->
<!--        <url>https://github.rbx.com/Roblox/data-sketches-functions/tree/master</url>-->
<!--        <tag>HEAD</tag>-->
<!--    </scm>-->

<!--    <distributionManagement>-->
<!--        <repository>-->
<!--            <id>central</id>-->
<!--            <name>artifactory.rbx.com-releases</name>-->
<!--            <url>https://artifactory.rbx.com:443/maven-rbx-snd-all</url>-->
<!--        </repository>-->
<!--    </distributionManagement>-->

</project>